# mslice

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  MSliceMainView.py  MainPresenter.py  MainQuickView.py  MainView.py  README.md  build_all_ui_files.py  cli.html  command.py  conda_build_config.yaml  cutting.html  environment.yml  genindex.html  index.html  install-requirements.txt  mainview.py  math_ref.html  meta.yaml  mslice-developer.yml  mslice.py  mslice.ui  mslice_main_window.py  mslicedevel.bat  mslicedevel.sh  objects.inv  pip-requirements.txt  pylint-check.py  pylint_check.py  pyproject.toml  qq  quickstart.html  search.html  searchindex.js  setup-requirements.txt  (+9 more)
.doctrees/: cli.doctree  cutting.doctree  environment.pickle  index.doctree  math_ref.doctree  quickstart.doctree  slicing.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: conda.yml  deployConda.yml  deploy_conda.yml  deploy_conda_linux.yml  deploy_conda_nightly.yml  deploy_conda_osx.yml  deploy_conda_unstable.yml  deploy_conda_win.yml  online_doc_update.yml  onlinedocupdate.yml  test_action.yml  unit_tests.yml  unit_tests_mpl_3_6.yml  unit_tests_nighly.yml  unit_tests_nightly.yml  unittest.yml
PowderProjection/: PowderProjectionCalculatorPresenter.py  PowderProjectionQuickView.py  command.py
QuickView/: QuickView.py  Ui.py  getter_ui.py  ui_mock.py
Tests/: PowderProjectionPresenterTest.py  SlicePlotterPresenterTest.py  WorkspaceManagerPresenterTest.py
WorkspaceManager/: WorkspaceManagerPresenter.py  WorkspaceManagerPresenterTest.py  WorkspaceManagerQuickView.py  WorkspaceView.py  command.py
_sources/: cli.rst.txt  cutting.rst.txt  index.rst.txt  quickstart.rst.txt  slicing.rst.txt
_static/: documentation_options.js
buildscripts/: buildscript.sh  create_virtualenv.sh  install.sh  install_mantidnightly.sh  run.sh
cli/: __init__.py  _mslice_commmands.py
conda/: conda_build_config.yaml  meta.yaml
docs/: Makefile  cli.rst  conf.py  cutting.rst  make.bat  math_ref.rst  slicing.rst
docs/source/: cli.rst  conf.py  cutting.rst  index.rst  math_ref.rst  plotwindows.rst  quickstart.rst  slicing.rst
misc/: MDUtils.py
models/cut/: cut_algorithm.py  cut_plotter.py  mantid_cut_algorithm.py  matplotlib_cut_plotter.py
models/slice/: mantid_slice_algorithm.py  matplotlib_slice_plotter.py  slice_algorithm.py  slice_plotter.py
models/workspacemanager/: mantid_workspace_provider.py  workspace_provider.py
mslice/: __init__.py  app.py
mslice/app/: __init__.py  __main__.py  mainwindow.py  mainwindow.ui  presenters.py  qapp.py  qpp.py
mslice/cli/: __init__.py  _mslice_commands.py  _mslice_commmands.py  cli_helperfunctions.py  cli_main_presenter.py  cli_mslice_projection_functions.py  cli_powder.py  helperfunctions.py  plotfunctions.py  projection_functions.py
mslice/models/: alg_workspace_ops.py  axis.py  cmap.py  colors.py  intensity_correction_algs.py  labels.py  units.py  utility.py
mslice/plotting/: __init__.py  _pyplot_decorators.py  backend.py  cli_helperfunctions.py  config.py  currentfigure.py  figuremanager.py  globalfiguremanager.py  observabledictionary.py  pyplot.py  script_generation.py  ticker.py  units.py
mslice/presenters/: busy.py  cut_plotter_presenter.py  cut_presenter.py  cut_widget_presenter.py  data_loader_presenter.py  main_presenter.py  plot_options_presenter.py  powder_projection_presenter.py  presenter_utility.py  quick_options_presenter.py  slice_plotter_presenter.py  (+2 more)
mslice/util/: compat.py  (+5 more)
plotting/: FigureManager.py  __init__.py  _pyplot_decorators.py  colorbar_spinners.py  figuremanager.py  plot_figure.py  pyplot.py  script_generation.py  start_ipython.bat  start_script.ipy
powderprojection/: MantidProjectionCalculator.py  PowderProjectionCalculatorPresenter.py  PowderProjectionPresenter.py  PowderProjectionQuickView.py  PowderProjectionView.py  ProjectionCalculator.py
presenters/: cut_presenter.py  main_presenter.py  powder_projection_presenter.py  slice_plotter_presenter.py  validation_decorators.py  workspace_manager_presenter.py
quickview/: QuickView.py  Ui.py  ui_mock.py  workspace_manager_quickview.py
scripts/: build_all_ui_files.py  main.ipy  mslice  mslice.bat  mslice.desktop  start_mslice.bat  start_mslice.py  start_script.ipy
sliceplotter/: MatplotlibSlicePlotter.py  SlicePlotterView.py  command.py  sliceplotterpresenter.py
tests/: __init__.py  alg_workspace_ops_test.py  app_presenters_test.py  app_test.py  axis_test.py  cli_helper_functions_test.py  cli_mslice_projection_test.py  colors_test.py  command_line_test.py  cut_algorithm_test.py  cut_functions_test.py  cut_normalisation_test.py  cut_plot_test.py  cut_plotter_presenter_test.py  cut_presenter_test.py  cut_widget_presenter_test.py  data_loader_test.py  energy_units_test.py  figure_manager_test.py  file_io_test.py  histogram_workspace_test.py  intensity_correction_algs_test.py  intensity_correction_util_test.py  main_presenter_test.py  numpy_helper_test.py  pixel_workspace_test.py  plot_figure_test.py  plot_options_presenter_test.py  plotselector_model_test.py  plotselector_presenter_test.py  plotselector_view_test.py  powder_projection_presenter_test.py  projection_calculator_test.py  quick_options_test.py  rebose_algorithm_test.py  scripting_helperfunctions_test.py  scripting_tests.py  slice_algorithm_test.py  slice_functions_test.py  slice_plot_test.py  (+9 more)
tools/: boilerplate.py
views/: cut_view.py  powder_projection_view.py  slice_plotter_view.py  workspace_view.py
workspacemanager/: MantidWorkspaceProvider.py  WorkspaceManagerPresenter.py  WorkspaceManagerPresenterTest.py  WorkspaceManagerQuickView.py  WorkspaceProvider.py  WorkspaceView.py
(+332 files in other folders)
