[build-system]
requires = ["setuptools >=80.9.0,<81",
            "versioningit",]
build-backend = "setuptools.build_meta"

[project]
name = "mslice"
dynamic = ["version"]
authors = [
  { name="The Mantid Project", email="mantid-help@mantidproject.org" },
]
description = "Visualise and slice data from Mantid"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ipython",
    "numpy",
    "matplotlib>=3.10.0",
    "qtpy",
]

[project.optional-dependencies]
tests = [
    "coverage",
    "pytest",
]
dev = [
    "pre-commit",
]

[project.urls]
"Homepage" = "https://mantidproject.github.io/mslice/"
"Bug Tracker" = "https://github.com/mantidproject/mslice/issues"

[project.scripts]
mslice = "mslice.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mslice.images" = ["*.ico", "*.png", "*.svg"]
"mslice.app" = ["*.ui"]
"mslice.plotting.plot_window" = ["*.ui"]
"mslice.widgets.cut" = ["*.ui"]
"mslice.widgets.dataloader" = ["*.ui"]
"mslice.widgets.projection.powder" = ["*.ui"]
"mslice.widgets.slice" = ["*.ui"]
"mslice.widgets.status" = ["*.ui"]
"mslice.widgets.workspacemanager" = ["*.ui"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

[tool.coverage.report]
include = [
    "*/src/mslice/presenters/*",
    "*/src/mslice/models/*",
    "*/src/mslice/scripting/*",
    "*/src/mslice/workspace/*",
    "*/src/mslice/util/mantid/*",
    "*/src/mslice/plotting/globalfiguremanager.py"
]

omit = [
    "*/src/mslice/presenters/interfaces/*",
    "*/src/mslice/util/mantid/__init__.py",
    "*/src/mslice/util/mantid/mantid_algorithms.py",
    "*/src/mslice/workspace/base.py",
    "*/src/mslice/scripting/__init__.py",
    "*/src/mslice/models/workspacemanager/file_io.py",
    "*/src/mslice/models/workspacemanager/rebose_algorithm.py",
    "*/src/mslice/models/projection/powder/make_projection.py",
    "*/src/mslice/models/projection/powder/projection_calculator.py",
    "*/src/mslice/models/slice*",
    "*/src/mslice/models/cut/cut_algorithm.py",
    "*/src/mslice/models/labels.py",
    "*/src/mslice/models/colors.py",
]

fail_under = 85
show_missing = true

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}.dev{distance}"
dirty = "{base_version}.dev0"
distance-dirty = "{base_version}.dev{distance}"

[tool.versioningit.write]
file = "src/mslice/__init__.py"